examples/test_package/Double_dc_only_report_tool_new/steps/benchcalcu_partial_run5/#test_results_result.txt
Error evaluating Problog model:
    toks = self.label_tokens(string, root_tokens)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/zhenzhili/miniforge3/envs/langda/lib/python3.11/site-packages/problog/parser.py", line 1206, in label_tokens
    raise ParseError(string, "Ambiguous token role", t.location)
problog.parser.ParseError: Ambiguous token role at 33:1.% Problog Inference Result：
query_sum([4, 7, 8, 2, 9]) = 1.0000
query_sum([4, 7, 8, 3, 0]) = 1.0000
query_sum([5, 6, 7, 2, 8]) = 1.0000
query_sum([5, 7, 8, 4, 1]) = 1.0000
query_sum([6, 7, 8, 5, 2]) = 1.0000
query_sum([7, 4, 5, 2, 6]) = 1.0000
query_sum([7, 5, 6, 3, 8]) = 1.0000
query_sum([8, 3, 4, 2, 5]) = 1.0000
query_sum([8, 4, 5, 3, 7]) = 1.0000
query_sum([8, 5, 6, 4, 9]) = 1.0000